[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/LeaderboardTops.gd" type="Script" id=1]
[ext_resource path="res://addons/silent_wolf/assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/UITheme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]

[node name="LeaderboardTops" type="Node2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )

[node name="OldBoard" type="MarginContainer" parent="."]
visible = false
margin_left = 50.0
margin_right = 50.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="HighScores" type="TextureRect" parent="OldBoard"]
margin_bottom = 40.0

[node name="TitleContainer" type="Control" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1220.0
margin_bottom = 20.0
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="TitleContainer"]
margin_left = 467.0
margin_right = 533.0
margin_bottom = 12.0
rect_scale = Vector2( 4, 4 )
text = "Top Players"

[node name="Board" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 89.3333
margin_right = 1212.0
margin_bottom = 1140.33
theme = ExtResource( 5 )
custom_constants/separation = 0

[node name="MessageContainer" type="CenterContainer" parent="Board"]
visible = false
margin_top = 89.0
margin_right = 1200.0
margin_bottom = 126.0

[node name="TextMessage" type="Label" parent="Board/MessageContainer"]
margin_left = 591.0
margin_top = 17.0
margin_right = 608.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Loading scores..."
valign = 1

[node name="HighScores" type="CenterContainer" parent="Board"]
margin_right = 1200.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = SubResource( 3 )

[node name="ScoreItemContainer" type="VBoxContainer" parent="Board/HighScores"]
margin_left = 600.0
margin_top = 50.0
margin_right = 600.0
margin_bottom = 50.0
theme = ExtResource( 5 )

[node name="CloseButtonContainer" type="Control" parent="."]
margin_left = 9.33333
margin_top = 1198.67
margin_right = 1209.33
margin_bottom = 1198.67
theme = ExtResource( 5 )

[node name="CloseButton" parent="CloseButtonContainer" instance=ExtResource( 4 )]
margin_left = 568.0
margin_right = 631.0
margin_bottom = 48.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 5 )
text = "Close Leaderboard"

[connection signal="pressed" from="CloseButtonContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
